# hodu

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md
crates/hodu_core/: Cargo.toml
crates/hodu_core/src/: ops.rs  snapshot.rs  types.rs
crates/hodu_core/src/be/: storage.rs
crates/hodu_core/src/be_cpu/: storage.rs
crates/hodu_core/src/be_cpu/storage/: ops_scan.rs
crates/hodu_core/src/be_cuda/: storage.rs
crates/hodu_core/src/be_cuda/storage/: ops_scan.rs
crates/hodu_core/src/be_metal/: storage.rs
crates/hodu_core/src/be_metal/storage/: ops_scan.rs
crates/hodu_core/src/tensor/gradient/: vjp_scan.rs
crates/hodu_core/src/tensor/ops/: indexing.rs  linalg.rs  normalization.rs  scan.rs  shape.rs
crates/hodu_core/src/types/: dynamic_registry.rs  symbolic_layout.rs  symbolic_shape.rs
crates/hodu_cpu_kernels/: Cargo.toml
crates/hodu_cpu_kernels/kernels/: ops_scan.c
crates/hodu_cpu_kernels/src/kernels/: ops_scan.rs
crates/hodu_cuda_kernels/: Cargo.toml
crates/hodu_cuda_kernels/kernels/: ops_scan.cu
crates/hodu_cuda_kernels/src/: lib.rs
crates/hodu_cuda_kernels/src/kernels/: ops_scan.rs
crates/hodu_datasets/: Cargo.toml
crates/hodu_datasets/macros/: Cargo.toml
crates/hodu_datasets/src/data/: dataloader.rs
crates/hodu_internal/: Cargo.toml
crates/hodu_internal/src/: lib.rs
crates/hodu_macro_utils/: Cargo.toml
crates/hodu_metal_kernels/: Cargo.toml
crates/hodu_metal_kernels/kernels/: ops_scan.metal
crates/hodu_metal_kernels/src/kernels/: ops_scan.rs
crates/hodu_nn/: Cargo.toml
crates/hodu_nn/macros/: Cargo.toml
crates/hodu_plugin/: Cargo.toml
crates/hodu_plugin/src/: backend.rs  lib.rs  rpc.rs  tensor.rs
crates/hodu_plugin_runtime/: Cargo.toml
docs/: TODOS-CLI.md  TODOS-PLUGIN.md  TODOS-SDK.md  TODOS.md
hodu-cli/: Cargo.toml
hodu-cli/src/: main.rs  plugins.rs
hodu-cli/src/commands/: build.rs  clean.rs  convert.rs  doctor.rs  inspect.rs  plugin.rs  run.rs  setup.rs
hodu-cli/src/commands/plugin/: install.rs  update.rs
hodu-cli/src/plugins/: process.rs
hodu-cli/src/tensor/: loader.rs
hodu-plugin-sdk/: build.rs
hodu-plugin-sdk/macros/src/: lib.rs
hodu-plugin-sdk/src/: backend.rs  context.rs  server.rs  testing.rs
src/: lib.rs
tools/: check.sh  format.sh  publish.sh
