[package]
name = "hodu"
version = "0.3.0"
description = "A machine learning library built with user convenience at its core"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"
documentation = "https://docs.rs/hodu"
readme = "README.md"
keywords = ["tensor", "machine-learning", "hodu"]
categories = ["science"]

[features]
default = ["serde"]
serde = ["hodu_internal/serde"]

# optional dtype
f8e5m2 = ["hodu_internal/f8e5m2"]
f64 = ["hodu_internal/f64"]
u16 = ["hodu_internal/u16"]
u64 = ["hodu_internal/u64"]
i16 = ["hodu_internal/i16"]
i64 = ["hodu_internal/i64"]

# optional cpu accelerator
openblas = ["hodu_internal/openblas"]

# optional device
cuda = ["hodu_internal/cuda"]
metal = ["hodu_internal/metal"]

[dependencies]
hodu_internal = { workspace = true }

[workspace]
members = ["crates/*"]
exclude = ["crates/hodu_cuda_kernels", "crates/hodu_metal_kernels"]
resolver = "2"

[workspace.dependencies]
dashmap = "6.1.0"
dirs = { version = "6.0.0" }
float8 = { version = "0.5.0", features = ["num-traits", "rand_distr"] }
fs2 = "0.4.3"
half = { version = "2.7.1", features = ["num-traits", "rand_distr"] }
hodu_core = { path = "crates/hodu_core", version = "0.3.0" }
hodu_cpu_kernels = { path = "crates/hodu_cpu_kernels", version = "0.3.0" }
hodu_cuda_kernels = { path = "crates/hodu_cuda_kernels", version = "0.3.0" }
hodu_datasets = { path = "crates/hodu_datasets", version = "0.3.0" }
hodu_datasets_macros = { path = "crates/hodu_datasets/macros", version = "0.3.0" }
hodu_internal = { path = "crates/hodu_internal", version = "0.3.0" }
hodu_macro_utils = { path = "crates/hodu_macro_utils", version = "0.3.0" }
hodu_metal_kernels = { path = "crates/hodu_metal_kernels", version = "0.3.0" }
hodu_nn = { path = "crates/hodu_nn", version = "0.3.0" }
hodu_nn_macros = { path = "crates/hodu_nn/macros", version = "0.3.0" }
hodu_plugin = { path = "crates/hodu_plugin", version = "0.1.0" }
hodu_plugin_runtime = { path = "crates/hodu_plugin_runtime", version = "0.1.0", default-features = false }
log = "0.4.29"
num-traits = { version = "0.2.19" }
paste = "1.0.15"
postcard = { version = "1.1.3", features = ["alloc"] }
proc-macro2 = "1.0"
quote = "1.0"
rand = { version = "0.9.2" }
rand_distr = { version = "0.6.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_repr = "0.1.20"
smallvec = { version = "1.15.1" }
syn = { version = "2.0", features = ["full"] }
toml_edit = { version = "0.23.10", features = ["parse"] }
