[package]
name = "hodu-cli"
version = "0.1.0"
description = "Command-line interface for the Hodu ML toolkit"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/daminstudio/hodu"
readme = "README.md"
keywords = ["cli", "machine-learning", "inference", "hodu"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "hodu"
path = "src/main.rs"

[lib]
name = "hodu_cli"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
float8 = { workspace = true }
fs2 = { workspace = true }
half = { workspace = true }
hex = { workspace = true }
hodu_core = { workspace = true, features = ["serde", "f8e5m2", "f64", "u16", "u64", "i16", "i64"] }
hodu_plugin = { workspace = true }
hodu_plugin_runtime = { workspace = true, features = ["format", "backend"] }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
wait-timeout = { workspace = true }
