[package]
name = "hodu_core"
version = "0.3.0"
description = "hodu core"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
serde = ["dep:postcard", "dep:serde", "dep:serde_json", "dep:serde_repr", "smallvec/serde"]

# optional dtype
f8e5m2 = []
f64 = []
u16 = []
u64 = []
i16 = []
i64 = []

# optional cpu accelerator
openblas = ["hodu_cpu_kernels/openblas"]

# optional device
cuda = ["dep:hodu_cuda_kernels"]
metal = ["metal-device", "dep:hodu_metal_kernels"]
metal-device = []  # Device::Metal enum only, no runtime

[dependencies]
dashmap = { workspace = true }
float8 = { workspace = true, features = ["num-traits", "rand_distr"] }
half = { workspace = true, features = ["num-traits", "rand_distr"] }
hodu_cpu_kernels = { workspace = true }
hodu_cuda_kernels = { workspace = true, optional = true }
hodu_metal_kernels = { workspace = true, optional = true }
num-traits = { workspace = true }
paste = { workspace = true }
postcard = { workspace = true, optional = true, features = ["alloc"] }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_repr = { workspace = true, optional = true }
smallvec = { workspace = true }
