[package]
name = "hodu_cpu_kernels"
version = "0.3.0"
description = "hodu cpu kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
openblas = []

[build-dependencies]
cc = "1.2.48"

[dependencies]
float8 = { workspace = true }
half = { workspace = true }
paste = { workspace = true }
