[package]
name = "hodu_cpu_kernels"
version = "0.3.0"
description = "hodu cpu kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
openblas = []

[build-dependencies]
cc = { workspace = true }

[dependencies]
float8 = { workspace = true, features = ["num-traits", "rand_distr"] }
half = { workspace = true, features = ["num-traits", "rand_distr"] }
paste = { workspace = true }
