[package]
name = "hodu_cuda_kernels"
version = "0.3.0"
description = "hodu cuda kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
default = ["cudarc/no-std", "float8/cuda"]
std = ["cudarc/std", "float8/cuda"]

[dependencies]
cudarc = { version = "0.17.7", default-features = false, features = [
    "f8",
    "f16",
    "cublas",
    "cublaslt",
    "cuda-version-from-build-system",
    "driver",
    "dynamic-linking",
    "nvrtc"
] }
float8 = { version = "0.4.2", default-features = false, features = [
    "num-traits",
    "rand_distr",
] }
half = { version = "2.7.1", default-features = false, features = [
    "num-traits",
    "rand_distr",
] }
paste = "1.0.15"
spin = "0.10"
