[package]
name = "hodu_datasets"
version = "0.3.0"
description = "hodu datasets"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
serde = ["hodu_core/serde"]

[dependencies]
hodu_core = { workspace = true }
hodu_datasets_macros = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
