[package]
name = "hodu_internal"
version = "0.3.0"
description = "hodu internal"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
serde = ["hodu_core/serde", "hodu_nn/serde", "hodu_datasets/serde"]

f8e5m2 = ["hodu_core/f8e5m2", "hodu_nn/f8e5m2"]
f64 = ["hodu_core/f64", "hodu_nn/f64"]
u16 = ["hodu_core/u16", "hodu_nn/u16"]
u64 = ["hodu_core/u64", "hodu_nn/u64"]
i16 = ["hodu_core/i16", "hodu_nn/i16"]
i64 = ["hodu_core/i64", "hodu_nn/i64"]

# optional cpu accelerator
openblas = ["hodu_core/openblas"]

# optional device
cuda = ["hodu_core/cuda"]
metal = ["hodu_core/metal"]

[dependencies]
hodu_core = { workspace = true }
hodu_datasets = { workspace = true }
hodu_nn = { workspace = true }
