[package]
name = "hodu_macro_utils"
version = "0.3.0"
description = "hodu macro utils"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
toml_edit = { workspace = true }
