[package]
name = "hodu_metal_kernels"
version = "0.3.0"
description = "hodu metal kernels"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]

[dependencies]
half = { version = "2.7.1", default-features = false, features = [
    "num-traits",
    "rand_distr",
] }
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
