[package]
name = "hodu_plugin"
version = "0.1.0"
description = "Hodu plugin protocol types"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
