[package]
name = "hodu_plugin_runtime"
version = "0.1.0"
description = "Hodu plugin runtime - loading and executing plugins"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[features]
default = ["format", "backend"]
format = []
backend = []

[dependencies]
hodu_core = { workspace = true, features = ["f8e5m2", "f64", "u16", "u64", "i16", "i64"] }
hodu_plugin = { workspace = true }
dirs = { workspace = true }
fs2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
