[package]
name = "hodu_nn_macros"
version = "0.3.0"
description = "hodu nn macros"
license = "BSD-3-Clause"
authors = ["Han Damin <miniex@daminstudio.net>"]
edition = "2021"
publish = true
repository = "https://github.com/miniex/hodu"

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
hodu_macro_utils = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
